# block-negative-comments

./: .gitignore  CLAUDE.md  README.md  biome.json  package.json  tsconfig.json  wxt.config.ts
.github/workflows/: ci.yml
entrypoints/: background.ts  content.ts
entrypoints/comment-history-viewer/: app.tsx  index.html  main.tsx
entrypoints/popup/: app.tsx  main.tsx
entrypoints/popup/components/apperance-settings/: index.tsx  select-color-schema.tsx
entrypoints/popup/components/development-settings/: export-comment-history-button.tsx  index.tsx  log-filter-switch.tsx  max-comment-history-input.tsx  open-comment-history-button.tsx
entrypoints/popup/components/header/: enabled-switch.tsx  index.tsx
entrypoints/popup/components/model-settings/: confidence-threshold-slider.tsx  index.tsx  model-select.tsx  score-threshold-slider.tsx  system-prompt-textarea.tsx  user-prompt-textarea.tsx
entrypoints/popup/hooks/: use-model.ts
models/: .gitignore  package.json  pyproject.toml
models/sandbox/: test.py  test.ts
models/scripts/: bert-base-japanese-onnx.py  convert.ts
modules/: ort-wasm-simd-threaded-jsep-wasm.ts
sandbox/app/: .gitignore  package.json
sandbox/app/src/: app.tsx  main.tsx  types.ts  worker.ts
sandbox/app/src/components/: sentiment-analysis.tsx
sandbox/app/src/components/ui/: scroll-area.tsx
sandbox/app/src/hooks/: use-history.ts  use-transformer.ts
utils/: messaging.ts  storage.ts
utils/db/: comment-history.ts
